2003-05-26  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opgprof_options.cpp: no need to use unmergeable_profile here

2003-05-25  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386.piii.unit_masks: tweak comment, change default unit mask
	  for kni instruction to 0 and type to exclusive

2003-05-25  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_container.cpp: thinko
	* pp/opreport.cpp: typo

2003-05-25  John Levon  <levon@movementarian.org>

	* libopt++/popt_options.h:
	* libopt++/popt_options.cpp: obvious cleanup,
	remove some dead code

2003-05-25  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_flags: cf_image_name new column_flags flag
	* libpp/profile_container.cpp: use above flag. Don't compare app_name
	  by string but id
	* pp/opreport.cpp: hide image_name when un-neccessary

2003-05-24  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/srcdoc/Doxyfile:
	* libpp/profile.h:
	* libpp/profile_container.h:
	* libutil++/utility.h: remove gcc 2.91 noncopyable as empty base class
	 work-around

2003-05-23  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: do early check of libiberty

	* libpp/symbol_sort.cpp: 2.91 compile fix

2003-05-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/child_read.h: minor #include fix

2003-05-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/name_storage.cpp: debug_name_storage::name() 
	  return an empty string when for zero id to avoid exception

2003-05-21  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile.cpp:
	* libpp/op_header.h:
	* libpp/op_header.cpp: when sample file differ ouput the sample
	  filename

	* pp/opannotate.cpp: remove spurious output

	* */Makefile.am:
	* configure.in: handle our own OP_CFLAGS, OP_CXXFLAGS to let user
	  free to use make CFLAGS=

2003-05-20  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile_spec.h:
	* libpp/profile_spec.cpp: remove lib_image_exclude, use image_exclude
	  instead. match() Handle image exclusion.

	* libregex/stl.pat.in: FIXME
