@@ -14,7 +14,6 @@ Before merging with trunk
  o opannotate unhandled option (probably not exhaustive) 
    --base-dir
  o inhibit build of opdiff in pp/Makefile.am
- o disallow --accumulated without -l. Generally disable meaningless combinations
  o test with 2.95 if cout.rdbuf(os.rdbuf()); work even when there is non
   flushed data in cout buffer. It's also not clear if at exit() we have not
   a problem (who is the owner of the buffer and in what order of and cout will
